# pico-experiments

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/bus/: CMakeLists.txt  i2c.cpp
src/bus/include/bus/: i2c.hpp
src/devices/: CMakeLists.txt  adc.cpp  button.cpp  lcd_1602.cpp  led.cpp  stepper_28BYJ48.cpp
src/devices/include/devices/: adc.hpp  button.hpp  lcd_1602.hpp  led.hpp  stepper_28BYJ48.hpp
src/events/: CMakeLists.txt  button_event.cpp  button_gesture_detector.cpp  gesture_event.cpp
src/events/include/events/: button_event.hpp  button_gesture_detector.hpp  event.hpp  gesture_detector.hpp  gesture_event.hpp
src/math/: CMakeLists.txt  algorithms.cpp
src/math/include/math/: algorithms.hpp
